--- a/styles.css
+++ b/styles.css
@@ -1780,8 +1780,8 @@ input[type="range"].form-range:focus::-ms-thumb {
     }
 
     .form-group {
-        min-width: 160px;
-        max-width: 160px;
+        min-width: 171px; /* Dopasowanie do wizualnej szerokości suwaka */
+        max-width: 171px;
     }
 
     .variable-input-group[data-type="nadplata"] .fields-wrapper {
@@ -1790,49 +1790,50 @@ input[type="range"].form-range:focus::-ms-thumb {
     }
 
     .variable-input-group[data-type="nadplata"] .form-group {
-        min-width: 160px;
-        max-width: 160px;
+        min-width: 171px;
+        max-width: 171px;
     }
 
     .variable-input-group[data-type="nadplata"] .form-control {
-        width: 120px; /* 160px - 40px dla jednostki "miesiącu" */
-        border: none; /* Usuwamy border z inputa */
+        width: 121px; /* 171px - 50px dla jednostki "miesiącu" */
+        border: none;
         border-radius: var(--border-radius) 0 0 var(--border-radius);
     }
 
     .variable-input-group[data-type="nadplata"] .form-group:nth-child(3) .input-group,
     .variable-input-group[data-type="nadplata"] .form-group:nth-child(4) .input-group {
-        width: 160px;
+        width: 171px;
         flex-direction: row;
         align-items: center;
-        border: 1px solid var(--border-color); /* Border na całym .input-group */
+        border: 1px solid var(--border-color);
         border-radius: var(--border-radius);
+        padding: 0 2px; /* Dodajemy padding dla lepszej estetyki */
     }
 
     .variable-input-group[data-type="nadplata"] .form-group:nth-child(3) .form-control {
-        width: 120px;
+        width: 121px;
         border-radius: var(--border-radius) 0 0 var(--border-radius);
     }
 
     .variable-input-group[data-type="nadplata"] .form-group:nth-child(3) .input-group-text.unit-miesiacu {
-        width: 40px;
-        min-width: 40px;
-        font-size: 0.6em;
-        border: none; /* Usuwamy border z jednostki */
+        width: 50px;
+        min-width: 50px;
+        font-size: 0.55em; /* Zmniejszamy czcionkę */
+        border: none;
         background: var(--input-group-bg);
         padding: 0 2px;
         border-radius: 0 var(--border-radius) var(--border-radius) 0;
     }
 
     .variable-input-group[data-type="nadplata"] .form-group:nth-child(4) .form-control {
-        width: 130px; /* 160px - 30px dla jednostki "zł" */
+        width: 141px; /* 171px - 30px dla jednostki "zł" */
         border-radius: var(--border-radius) 0 0 var(--border-radius);
     }
 
     .variable-input-group[data-type="nadplata"] .form-group:nth-child(4) .input-group-text.unit-zl {
         width: 30px;
         min-width: 30px;
-        font-size: 0.6em;
+        font-size: 0.55em;
         border: none;
         background: var(--input-group-bg);
         padding: 0 2px;
@@ -1840,12 +1841,12 @@ input[type="range"].form-range:focus::-ms-thumb {
     }
 
     .variable-input-group[data-type="nadplata"] .input-group {
-        width: 160px;
+        width: 171px;
     }
 
     .variable-input-group[data-type="nadplata"] .nadplata-type-select,
     .variable-input-group[data-type="nadplata"] .nadplata-effect-select {
-        width: 160px;
+        width: 171px;
     }
 
     .variable-input-group[data-type="oprocentowanie"] .fields-wrapper {
@@ -1854,34 +1855,35 @@ input[type="range"].form-range:focus::-ms-thumb {
     }
 
     .variable-input-group[data-type="oprocentowanie"] .form-group {
-        min-width: 160px;
-        max-width: 160px;
+        min-width: 171px;
+        max-width: 171px;
     }
 
     .variable-input-group[data-type="oprocentowanie"] .form-control {
-        width: 115px; /* 160px - 45px dla jednostki "miesiąca" */
+        width: 116px; /* 171px - 55px dla jednostki "miesiąca" */
         border: none;
         border-radius: var(--border-radius) 0 0 var(--border-radius);
     }
 
     .variable-input-group[data-type="oprocentowanie"] .form-control.variable-cykl {
-        width: 115px;
+        width: 116px;
         border-radius: var(--border-radius) 0 0 var(--border-radius);
     }
 
     .variable-input-group[data-type="oprocentowanie"] .form-group:nth-child(1) .input-group,
     .variable-input-group[data-type="oprocentowanie"] .form-group:nth-child(2) .input-group {
-        width: 160px;
+        width: 171px;
         flex-direction: row;
         align-items: center;
-        border: 1px solid var(--border-color); /* Border na całym .input-group */
+        border: 1px solid var(--border-color);
         border-radius: var(--border-radius);
+        padding: 0 2px;
     }
 
     .variable-input-group[data-type="oprocentowanie"] .form-group:nth-child(1) .input-group-text {
-        width: 45px;
-        min-width: 45px;
-        font-size: 0.6em;
+        width: 55px;
+        min-width: 55px;
+        font-size: 0.55em;
         border: none;
         background: var(--input-group-bg);
         padding: 0 2px;
@@ -1889,14 +1891,14 @@ input[type="range"].form-range:focus::-ms-thumb {
     }
 
     .variable-input-group[data-type="oprocentowanie"] .form-group:nth-child(2) .form-control {
-        width: 130px; /* 160px - 30px dla jednostki "%" */
+        width: 141px; /* 171px - 30px dla jednostki "%" */
         border-radius: var(--border-radius) 0 0 var(--border-radius);
     }
 
     .variable-input-group[data-type="oprocentowanie"] .form-group:nth-child(2) .input-group-text {
         width: 30px;
         min-width: 30px;
-        font-size: 0.6em;
+        font-size: 0.55em;
         border: none;
         background: var(--input-group-bg);
         padding: 0 2px;
@@ -1904,15 +1906,15 @@ input[type="range"].form-range:focus::-ms-thumb {
     }
 
     .variable-input-group[data-type="oprocentowanie"] .input-group {
-        width: 160px;
+        width: 171px;
     }
 
     .input-group {
-        width: 160px;
+        width: 171px;
     }
 
     #prowizja .input-group {
-        width: 160px;
+        width: 171px;
     }
 
     .chart-container {
